# investment-log-backend

./: .env.example  .gitignore  README.md  pyproject.toml  seed.py
.github/workflows/: ci.yml
alembic/versions/: 20260219_0001_init.py  20260220_0002_add_trades.py  20260305_0003_add_trade_review_fields.py  20260307_0004_add_trade_user_id.py  20260307_0005_add_invite_codes.py  20260307_0006_add_invite_used_at.py  20260313_0007_fills_price_decimal.py  20260330_0008_add_trade_import_lineage.py  20260418_0009_add_import_sessions.py  20260420_0010_add_realized_only_trade_fields.py
app/: main.py
app/api/: accounts.py  analysis.py  assets.py  dashboard.py  deps.py  imports.py  monthly.py  prices.py  settings.py  snapshots.py  trades.py
app/core/: analysis.py  config.py  constants.py  errors.py  invite_admin.py  invites.py  jwt_utils.py  observability.py  price_provider.py  private_access.py  rakuten_csv.py  rate_limit.py  runtime_config.py  sbi_csv.py
app/crud/: trades.py
app/db/: __init__.py  models.py  session.py
app/schemas/: account.py  analysis.py  asset.py  common.py  dashboard.py  imports.py  monthly.py  price.py  snapshot.py  trade.py
docs/: public_release_ops.md  release_e2e_checklist.md
docs/issues/: 2026-05-05_p1_rakuten_csv_error_polish.md
docs/release_e2e_runs/: 2026-03-08.md
tests/: conftest.py  test_api.py  test_invite_admin.py  test_rate_limit.py  test_release_tools.py
tools/: check_release_config.py  create_invite_code.py  manage_invite_codes.py  preflight_release.py  smoke_release.py
