[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-mvp-backend"
version = "0.1.0"
description = "Asset management MVP backend"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
